--- a/hi/clue4.html
+++ b/hi/clue4.html
@@ -126,8 +126,10 @@
     var mytube = 'he';
     var qid = 4;
     localStorage.setItem("planet-score4", '0');
+    var lng = 'en';
     $(function() {
         planet.readData();
+        planet.addQuestion('जमी हुई गैसों से बने इस ग्रह को देखने के लिए आपको दूरदर्शी चाहिए होगा| हीलियम (He) इकट्ठा करने के लिए इस ग्रह पर जाइए|');
         $('.submit-btn').click(function() {
             myTable = '';
             myTable = myTable + '<table width="100%" border="0" cellspacing="0" cellpadding="0" class="answerTable c-blue">';
@@ -153,7 +155,7 @@
                     $('.popup-small-head').html('गलत जवाब|');
                     $('.popup-small-content').html('<p>यह दूसरा संकेत देखिए|<br>इस ठन्डे नीले ग्रह पर सौर मंडल के किसी भी ग्रह से ज्यादा तेज हवाएं चलती हैं| फिर से कोशिश कीजिए|</p><p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>');
                     $('.feedback-popup-small').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('बहुत खूब!');
                     myhtml = '<p>वरुण सूर्य से आठवां ग्रह है| यह नीला ग्रह केवल दूरदर्शी से ही दिखाई देता है| यह दूसरा सबसे ठंडा ग्रह है, मगर इसपर किसी भी ग्रह से ज्यादा तेज हवाएं चलती हैं|</p>';
@@ -161,7 +163,7 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             } else {
                 if (curPlanet != answer) {
@@ -171,7 +173,7 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('बहुत खूब!');
                     myhtml = '<p>वरुण सूर्य से आठवां ग्रह है| यह नीला ग्रह केवल दूरदर्शी से ही दिखाई देता है| यह दूसरा सबसे ठंडा ग्रह है, मगर इसपर किसी भी ग्रह से ज्यादा तेज हवाएं चलती हैं|</p>';
@@ -179,13 +181,16 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             }
             playattempt++;
         });
         $('.next-btn').click(function() {
             if ($(this).css('opacity') == 1) {
+                myData.appData.attempt[qid - 1].clue_endTime = timeStamp();
+                myData.appData.attempt[qid - 1].createdAt = timeStamp();
+                planet.save();
                 window.open('clue5.html', '_self');
             }
         });
