--- a/hi/clue5.html
+++ b/hi/clue5.html
@@ -126,8 +126,10 @@
     var mytube = 'na';
     var qid = 5;
     localStorage.setItem("planet-score5", '0');
+    var lng = 'en';
     $(function() {
         planet.readData();
+        planet.addQuestion('भले ही यह सबसे छोटा ग्रह है, पर इसका घनत्व सबसे ज्यादा है| सोडियम (Na) इकट्ठा करने के लिए इस ग्रह पर जाइए|');
         $('.submit-btn').click(function() {
             myTable = '';
             myTable = myTable + '<table width="100%" border="0" cellspacing="0" cellpadding="0" class="answerTable c-blue">';
@@ -153,7 +155,7 @@
                     $('.popup-small-head').html('गलत जवाब|');
                     $('.popup-small-content').html('<p>यह दूसरा संकेत देखिए|<br>यह ग्रह सूर्य के सबसे नजदीक है और इसलिए इसकी परिक्रमण गति सभी ग्रहों से ज्यादा है| फिर से कोशिश कीजिए|</p><p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>');
                     $('.feedback-popup-small').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('सही जवाब|');
                     myhtml = '<p>बुध हमारे सौर मंडल का सबसे अंदरूनी ग्रह है जिस कारण से इसकी परिक्रमण गति सभी ग्रहों से ज्यादा है| यह नंगी आंखों से दिखाई देता है, पर क्योंकि यह सूर्य के बहुत करीब है, इसलिए यह केवल सूर्योदय से ठीक पहले या सूर्यास्त के ठीक बाद ही दिखाई देता है| यह सौर मंडल में सबसे छोटा ग्रह है और सभी ग्रहों में इसका द्रव्यमान सबसे कम है।</p>';
@@ -161,7 +163,7 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             } else {
                 if (curPlanet != answer) {
@@ -171,7 +173,7 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('सही जवाब|');
                     myhtml = '<p>बुध हमारे सौर मंडल का सबसे अंदरूनी ग्रह है जिस कारण से इसकी परिक्रमण गति सभी ग्रहों से ज्यादा है| यह नंगी आंखों से दिखाई देता है, पर क्योंकि यह सूर्य के बहुत करीब है, इसलिए यह केवल सूर्योदय से ठीक पहले या सूर्यास्त के ठीक बाद ही दिखाई देता है| यह सौर मंडल में सबसे छोटा ग्रह है और सभी ग्रहों में इसका द्रव्यमान सबसे कम है।</p>';
@@ -179,13 +181,16 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             }
             playattempt++;
         });
         $('.next-btn').click(function() {
             if ($(this).css('opacity') == 1) {
+                myData.appData.attempt[qid - 1].clue_endTime = timeStamp();
+                myData.appData.attempt[qid - 1].createdAt = timeStamp();
+                planet.save();
                 window.open('clue6.html', '_self');
             }
         });
