--- a/hi/clue9.html
+++ b/hi/clue9.html
@@ -126,8 +126,10 @@
     var mytube = 'co2';
     var qid = 9;
     localStorage.setItem("planet-score9", '0');
+     var lng = 'en';
     $(function() {
         planet.readData();
+        planet.addQuestion('इस ग्रह की घूर्णन अवधि इसकी परिक्रमण अवधि से ज्यादा है|यह घने बादलों से ढका है और सबसे गर्म ग्रह है| कार्बन डाइऑक्साइड (CO2) इकट्ठा करने के लिए इस ग्रह पर जाइए|');
         $('.submit-btn').click(function() {
             myTable = '';
             myTable = myTable + '<table width="100%" border="0" cellspacing="0" cellpadding="0" class="answerTable c-blue">';
@@ -153,7 +155,7 @@
                     $('.popup-small-head').html('गलत जवाब|');
                     $('.popup-small-content').html('<p>यह दूसरा संकेत देखिए|<br>केवल भोर या शाम के समय दिखने वाले इस ग्रह को ‘भोर का तारा’ या ‘सांझ का तारा’ भी कहते हैं| फिर से कोशिश कीजिए| </p><p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>');
                     $('.feedback-popup-small').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('सही जवाब|');
                     myhtml = '<p>भले ही शुक्र सूर्य से दूसरे स्थान पर है, मगर इसको ढकने वाले घने बादल गर्मी को कैद करके इसे सबसे गर्म ग्रह बना देते हैं| क्योंकि शुक्र एक भीतरी ग्रह है, इसलिए चन्द्रमा की तरह इसकी भी कलाएं दिखाई देती हैं| केवल भोर या शाम के समय दिखने वाले इस ग्रह को ‘भोर का तारा’ या ‘सांझ का तारा’ भी कहते हैं| </p>';
@@ -161,7 +163,7 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             } else {
                 if (curPlanet != answer) {
@@ -171,7 +173,7 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, false);
+                    planet.addAnswer(curPlanet, false, playattempt);
                 } else {
                     $('.popup-head').html('सही जवाब|');
                     myhtml = '<p>भले ही शुक्र सूर्य से दूसरे स्थान पर है, मगर इसको ढकने वाले घने बादल गर्मी को कैद करके इसे सबसे गर्म ग्रह बना देते हैं| क्योंकि शुक्र एक भीतरी ग्रह है, इसलिए चन्द्रमा की तरह इसकी भी कलाएं दिखाई देती हैं| केवल भोर या शाम के समय दिखने वाले इस ग्रह को ‘भोर का तारा’ या ‘सांझ का तारा’ भी कहते हैं| </p>';
@@ -179,13 +181,16 @@
                     myhtml = myhtml + '<p class="c-white">आगे जाने के लिए X पर क्लिक करें।</p>';
                     $('.popup-content').html(myhtml);
                     $('.feedback-popup').css('display', 'block');
-                    planet.addAnswer(curPlanet, true);
+                    planet.addAnswer(curPlanet, true, playattempt);
                 }
             }
             playattempt++;
         });
         $('.next-btn').click(function() {
             if ($(this).css('opacity') == 1) {
+                myData.appData.attempt[qid - 1].clue_endTime = timeStamp();
+                myData.appData.attempt[qid - 1].createdAt = timeStamp();
+                planet.save();
                 window.open('clue10.html', '_self');
             }
         });
